--- a/BancoAPI/Application/Application.csproj
+++ b/BancoAPI/Application/Application.csproj
@@ -7,10 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Features\Clientes\Commands\UpdateClienteCommand\" />
+    <Folder Include="Features\Clientes\Commands\DeleteClienteCommand\" />
+    <Folder Include="Features\Clientes\Queries\GetClienteById\" />
+    <Folder Include="Features\Clientes\Queries\GetAllClientes\" />
     <Folder Include="Mapping\" />
     <Folder Include="Interface\" />
     <Folder Include="Filters\" />
-    <Folder Include="Features\" />
     <Folder Include="Dtos\" />
   </ItemGroup>
 
