Add DBContext, Migrations, EntityConfig, Infraestructure Dep Inyections, Services, Update Nuggets, Add EntityFrameworkCore.Tools in API

--- a/BancoAPI/WebApi/appsettings.json
+++ b/BancoAPI/WebApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "SERVER=FRANKO6;Database=BancoApi;USER ID=sa;Password=Mexico_2023;Trusted_Connection=True;TrustServerCertificate=True; "
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
