--- a/BancoAPI/Application/Application.csproj
+++ b/BancoAPI/Application/Application.csproj
@@ -12,12 +12,12 @@
     <Folder Include="Features\Clientes\Queries\GetClienteById\" />
     <Folder Include="Features\Clientes\Queries\GetAllClientes\" />
     <Folder Include="Mapping\" />
-    <Folder Include="Interface\" />
     <Folder Include="Filters\" />
     <Folder Include="Dtos\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Ardalis.Specification" Version="7.0.0" />
     <PackageReference Include="FluentValidation" Version="11.7.1" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.7.1" />
     <PackageReference Include="MediatR" Version="12.1.1" />
