--- a/BancoAPI/WebApi/appsettings.json
+++ b/BancoAPI/WebApi/appsettings.json
@@ -2,6 +2,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "SERVER=FRANKO6;Database=BancoApi;USER ID=sa;Password=Mexico_2023;Trusted_Connection=True;TrustServerCertificate=True;"
   },
+  "JWT": {
+    "key": "PAO18LUAN20WEL22MIRA23KRIS23PAOV23INGR25",
+    "Issuer": "CursoNetCoreIssuer",
+    "Audience": "CursoNetCoreAudience",
+    "DurationInMinutes": 30
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
