Add IdentityExtension (Dependency Inyector)

--- a/BancoAPI/WebApi/appsettings.json
+++ b/BancoAPI/WebApi/appsettings.json
@@ -2,7 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "SERVER=FRANKO6;Database=BancoApi;USER ID=sa;Password=Mexico_2023;Trusted_Connection=True;TrustServerCertificate=True;"
   },
-  "JWT": {
+  "JWTSettings": {
     "key": "PAO18LUAN20WEL22MIRA23KRIS23PAOV23INGR25",
     "Issuer": "CursoNetCoreIssuer",
     "Audience": "CursoNetCoreAudience",
